added marathon to website, lodging option, NetSci
added marathon to website, lodging option, NetSci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6456,7 +6456,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T22:21:02Z</date>
+						<date>2019-02-17T00:42:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6581,6 +6581,26 @@
 								<key>Size</key>
 								<integer>114505</integer>
 							</dict>
+							<key>files/stacks-image-bd8f6d3-1200x802.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								2k3Xy9ALhoYd
+								/WCF2kQ47w==
+								</data>
+								<key>Size</key>
+								<integer>305694</integer>
+							</dict>
+							<key>files/stacks-image-cefbcff-1200x800.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								OT47m5t9hjdV
+								IR91e1lG7g==
+								</data>
+								<key>Size</key>
+								<integer>220476</integer>
+							</dict>
 							<key>files/stacks-image-d1e9fe8-1200x782.png</key>
 							<dict>
 								<key>Digest</key>
@@ -6625,11 +6645,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								eOxbAgkkcPW7
-								TgKOYh6Ydg==
+								sXiSnEwnPRcj
+								La+qFbT5ZA==
 								</data>
 								<key>Size</key>
-								<integer>173255</integer>
+								<integer>179022</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -6645,11 +6665,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kWABnsO/nI8m
-								CjK4Qt7Brw==
+								GrKtB7ubI4aI
+								+ztxsejGYA==
 								</data>
 								<key>Size</key>
-								<integer>97355</integer>
+								<integer>102523</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -6662,7 +6682,7 @@
 					<key>page53 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-14T16:00:49Z</date>
+						<date>2019-02-17T00:29:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7491,11 +7511,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hiCC6SWABvGB
-								AQSxJP/YAQ==
+								ox+vRZKphEeo
+								sROPyIKG/w==
 								</data>
 								<key>Size</key>
-								<integer>255197</integer>
+								<integer>255216</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7614,7 +7634,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-14T15:56:19Z</date>
+						<date>2019-02-17T00:29:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7973,11 +7993,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OLWoKriq0Mev
-								Gtkseb008Q==
+								IBNGwiQc9PAM
+								1QzBw/5Zkg==
 								</data>
 								<key>Size</key>
-								<integer>314547</integer>
+								<integer>314554</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13086,7 +13106,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-14T21:38:28Z</date>
+						<date>2019-02-17T00:31:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13135,11 +13155,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GgBKZb95py6y
-								QYnugtiuOw==
+								dDXxzZNUMTmA
+								GUxVExWydQ==
 								</data>
 								<key>Size</key>
-								<integer>5354</integer>
+								<integer>5450</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13188,7 +13208,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-14T21:38:29Z</date>
+						<date>2019-02-17T00:31:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14227,8 +14247,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dxGKczY4+3mh
-								Vy6GEG34rQ==
+								jI2sSbpgvZdc
+								wVHR7xT8Dg==
 								</data>
 								<key>Size</key>
 								<integer>4556</integer>
@@ -14315,8 +14335,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcELC7HK
-				JSCAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcEMcsIl
+				WiGAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -14326,7 +14346,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcELC7HKIdGA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcEMcsIlV1iA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
