--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-14T15:56:19Z</date>
+						<date>2019-02-17T00:29:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OLWoKriq0Mev
-								Gtkseb008Q==
+								IBNGwiQc9PAM
+								1QzBw/5Zkg==
 								</data>
 								<key>Size</key>
-								<integer>314547</integer>
+								<integer>314554</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
