--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-14T16:00:49Z</date>
+						<date>2019-02-17T00:29:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -864,11 +864,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hiCC6SWABvGB
-								AQSxJP/YAQ==
+								ox+vRZKphEeo
+								sROPyIKG/w==
 								</data>
 								<key>Size</key>
-								<integer>255197</integer>
+								<integer>255216</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
