added additional hotel options netsci
added additional hotel options netsci

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -6456,7 +6456,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-17T00:42:40Z</date>
+						<date>2019-02-18T17:07:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6645,11 +6645,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sXiSnEwnPRcj
-								La+qFbT5ZA==
+								iFfF9kDOil45
+								PEs7xf5fRw==
 								</data>
 								<key>Size</key>
-								<integer>179022</integer>
+								<integer>179771</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -6665,11 +6665,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GrKtB7ubI4aI
-								+ztxsejGYA==
+								aZxSuGBYlUSL
+								ALY6j48aZw==
 								</data>
 								<key>Size</key>
-								<integer>102523</integer>
+								<integer>106047</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13106,7 +13106,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-17T00:31:24Z</date>
+						<date>2019-02-18T16:58:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13155,11 +13155,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dDXxzZNUMTmA
-								GUxVExWydQ==
+								By97X6ZIjzMz
+								7J+Axt6emQ==
 								</data>
 								<key>Size</key>
-								<integer>5450</integer>
+								<integer>5386</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13208,7 +13208,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-17T00:31:24Z</date>
+						<date>2019-02-18T16:58:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14247,8 +14247,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jI2sSbpgvZdc
-								wVHR7xT8Dg==
+								EqAkQd3lRtWy
+								I318upTw5g==
 								</data>
 								<key>Size</key>
 								<integer>4556</integer>
@@ -14335,8 +14335,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcEMcsIl
-				WiGAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcENjvNG
+				Cy2AC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -14346,7 +14346,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcEMcsIlV1iA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcENjvNGB1+A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
