--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-18T17:07:47Z</date>
+						<date>2019-02-18T19:50:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -224,11 +224,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iFfF9kDOil45
-								PEs7xf5fRw==
+								4wB5iryGqkCN
+								HrbcDj2Bsg==
 								</data>
 								<key>Size</key>
-								<integer>179771</integer>
+								<integer>180945</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								aZxSuGBYlUSL
-								ALY6j48aZw==
+								pYPyqKVZ+aBt
+								bcmSG6oM0A==
 								</data>
 								<key>Size</key>
-								<integer>106047</integer>
+								<integer>107652</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
