--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-17T00:29:53Z</date>
+						<date>2019-02-18T19:23:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -394,8 +394,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IBNGwiQc9PAM
-								1QzBw/5Zkg==
+								/If7qpmGSNqK
+								ygYGVTRZiA==
 								</data>
 								<key>Size</key>
 								<integer>314554</integer>
