--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -9018,7 +9018,7 @@
 					<key>page59 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T18:05:27Z</date>
+						<date>2019-02-19T15:00:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9042,6 +9042,26 @@
 								</data>
 								<key>Size</key>
 								<integer>124861</integer>
+							</dict>
+							<key>files/stacks-image-1ac715b.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								SfnXnt28Obla
+								8GH9R2qDsA==
+								</data>
+								<key>Size</key>
+								<integer>128526</integer>
+							</dict>
+							<key>files/stacks-image-24a3404-1200x536.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								1VKLgSVLymTA
+								eyP3qRQ69w==
+								</data>
+								<key>Size</key>
+								<integer>33379</integer>
 							</dict>
 							<key>files/stacks-image-2968668-150x150.png</key>
 							<dict>
@@ -9267,11 +9287,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lV1XBfPzTqyj
-								vcQEzhjufg==
+								kwaWkfLxpHXS
+								85jFzPOeKQ==
 								</data>
 								<key>Size</key>
-								<integer>73183</integer>
+								<integer>73777</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13106,7 +13126,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-18T19:23:24Z</date>
+						<date>2019-02-19T14:44:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13155,11 +13175,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GgBKZb95py6y
-								QYnugtiuOw==
+								ek6RtkIAiYZW
+								WPIOHqbdLg==
 								</data>
 								<key>Size</key>
-								<integer>5354</integer>
+								<integer>5386</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13208,7 +13228,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-18T19:50:13Z</date>
+						<date>2019-02-19T14:44:45Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14247,11 +14267,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jXw1181U7pk8
-								NshDLn4QIw==
+								1RNyxIOZFCla
+								tVpxDADEcw==
 								</data>
 								<key>Size</key>
-								<integer>3705</integer>
+								<integer>4556</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14335,7 +14355,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HBDaH8jdvkgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HBDijAT8mCgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -14346,7 +14366,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcENofyN37GA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEOKMBPzCGA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
