--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T18:05:27Z</date>
+						<date>2019-02-19T15:00:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -59,6 +59,26 @@
 								</data>
 								<key>Size</key>
 								<integer>124861</integer>
+							</dict>
+							<key>files/stacks-image-1ac715b.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								SfnXnt28Obla
+								8GH9R2qDsA==
+								</data>
+								<key>Size</key>
+								<integer>128526</integer>
+							</dict>
+							<key>files/stacks-image-24a3404-1200x536.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								1VKLgSVLymTA
+								eyP3qRQ69w==
+								</data>
+								<key>Size</key>
+								<integer>33379</integer>
 							</dict>
 							<key>files/stacks-image-2968668-150x150.png</key>
 							<dict>
@@ -284,11 +304,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								lV1XBfPzTqyj
-								vcQEzhjufg==
+								kwaWkfLxpHXS
+								85jFzPOeKQ==
 								</data>
 								<key>Size</key>
-								<integer>73183</integer>
+								<integer>73777</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
