--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/15-Science-Olympiad/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/15-Science-Olympiad/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-03T19:29:29Z</date>
+						<date>2019-02-19T15:21:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -117,6 +117,16 @@
 								</data>
 								<key>Size</key>
 								<integer>175291</integer>
+							</dict>
+							<key>files/stacks-image-47dbc1f.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								5ZQBcoWh/Pfa
+								MifFgrt2PQ==
+								</data>
+								<key>Size</key>
+								<integer>215026</integer>
 							</dict>
 							<key>files/stacks-image-4aa612e.png</key>
 							<dict>
@@ -338,6 +348,16 @@
 								<key>Size</key>
 								<integer>12461</integer>
 							</dict>
+							<key>files/stacks-image-b6ebf51.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								gSJopWt5LZ5j
+								dutssFd3CQ==
+								</data>
+								<key>Size</key>
+								<integer>218939</integer>
+							</dict>
 							<key>files/stacks-image-d0bd460.png</key>
 							<dict>
 								<key>Digest</key>
@@ -347,16 +367,6 @@
 								</data>
 								<key>Size</key>
 								<integer>163226</integer>
-							</dict>
-							<key>files/stacks-image-dfbad10.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								gSJopWt5LZ5j
-								dutssFd3CQ==
-								</data>
-								<key>Size</key>
-								<integer>218939</integer>
 							</dict>
 							<key>files/stacks-image-f68f88f.png</key>
 							<dict>
@@ -392,11 +402,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								C6rBb1l14H3B
-								iFw4wslf4w==
+								sSt37qtY9jtX
+								b4XoaIuo+g==
 								</data>
 								<key>Size</key>
-								<integer>66870</integer>
+								<integer>67136</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
