--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -11066,7 +11066,7 @@
 					<key>page71 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-19T15:21:04Z</date>
+						<date>2019-02-20T15:00:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11411,15 +11411,25 @@
 								<key>Size</key>
 								<integer>210579</integer>
 							</dict>
+							<key>files/stacks-image-fbe6c67.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								OC+FYXTctYJj
+								YrYm+IaFfg==
+								</data>
+								<key>Size</key>
+								<integer>100576</integer>
+							</dict>
 							<key>files/stacks_page_page71.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								c+y93llEG9Dd
-								2KE/q+FvLw==
+								rmu+E4yNMV4G
+								mHSjpvUJCQ==
 								</data>
 								<key>Size</key>
-								<integer>112558</integer>
+								<integer>113144</integer>
 							</dict>
 							<key>files/stacks_page_page71.js</key>
 							<dict>
@@ -11435,11 +11445,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sSt37qtY9jtX
-								b4XoaIuo+g==
+								OFze9t/ufurL
+								dUzrU+X1Jw==
 								</data>
 								<key>Size</key>
-								<integer>67136</integer>
+								<integer>68339</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13238,7 +13248,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-19T18:56:11Z</date>
+						<date>2019-02-20T15:00:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14277,8 +14287,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								u9nOmGgpiEL6
-								BPqVW29u6w==
+								ipUXM+IMM4Pp
+								+91BaEnaPA==
 								</data>
 								<key>Size</key>
 								<integer>3705</integer>
@@ -14365,8 +14375,8 @@
 				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
 				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
 				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcEORGZ4
-				8vGAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
+				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcEO0YXp
+				bviAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
 				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
 				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
 				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
@@ -14376,7 +14386,7 @@
 				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
 				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
 				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcEORGZ49dyA
+				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcEO0YXpaoyA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
